[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/General/Generic/AliveObject.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/Piranhas/Green.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Scripts/AI/Piranha.gd" type="Script" id=3]
[ext_resource path="res://Sounds/Main/kick.wav" type="AudioStream" id=4]
[ext_resource path="res://GFX/Editor/Range.png" type="Texture" id=5]
[ext_resource path="res://Sounds/Main/shoot.wav" type="AudioStream" id=6]
[ext_resource path="res://GFX/Effects/Light.png" type="Texture" id=7]
[ext_resource path="res://Prefabs/Blocks/IceBlock.tres" type="SpriteFrames" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17, 17 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17, 32 )

[node name="Piranha" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 32
script = ExtResource( 1 )
vars = {
"no fireballs above screen": false,
"projectile count": 3,
"shoot interval": 10.0,
"type": 0
}
AI = ExtResource( 3 )
can_freeze = true
sound_pth = NodePath("Fire")
alt_sound_pth = NodePath("Kick")
animated_sprite_pth = NodePath("Sprite")
frozen_sprite_pth = NodePath("IceSprite")

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
rect = Rect2( -16, -64, 32, 64 )
process_parent = true
physics_process_parent = true

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -17 )
shape = SubResource( 1 )

[node name="Collision2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -32 )
shape = SubResource( 2 )
disabled = true

[node name="Sprite" type="AnimatedSprite" parent="."]
z_index = -1
frames = ExtResource( 2 )
playing = true
offset = Vector2( 0, -32 )

[node name="Placeholder1" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.388235 )
position = Vector2( 0, -96 )
z_index = -1
frames = ExtResource( 2 )
animation = "falling"
playing = true

[node name="Placeholder2" type="Sprite" parent="."]

[node name="Placeholder3" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.388235 )
position = Vector2( 1, -56 )
texture = ExtResource( 5 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 7 )
offset = Vector2( 0, -48 )
color = Color( 1, 0.501961, 0.501961, 1 )
energy = 0.4
shadow_filter = 2
shadow_filter_smooth = 4.0

[node name="Kick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "Sounds"

[node name="Fire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
max_distance = 750.0
attenuation = 0.392292
bus = "Sounds"

[node name="IceSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -32 )
frames = ExtResource( 8 )
animation = "medium"
